# fruid

./: .gitignore  Cargo.toml  animate.sh
src/: array2d.rs  lib.rs  main.rs
src/shaders/: unlit.vert  unlit.vert.spv
