[package]
name = "fruid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
idek_basics = { git = "http://github.com/Masterchef365/idek-basics.git", rev = "6a3e9c74" }
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
png = "0.17.7"
structopt = { version = "0.3", default-features = false }
